--- a/apps/restaurant/package.json
+++ b/apps/restaurant/package.json
@@ -9,11 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^7.9.1",
+    "@react-navigation/native": "^7.1.27",
     "expo": "~54.0.31",
+    "expo-av": "~16.0.8",
     "expo-modules-core": "~3.0.29",
+    "expo-notifications": "~0.32.16",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "^2.30.0",
+    "react-native-reanimated": "^4.2.1",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-screens": "^4.19.0",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@expo/ngrok": "^4.1.0",
