--- a/apps/backend/.env.save
+++ b/apps/backend/.env.save
@@ -1,5 +1,5 @@
 # Database
-DATABASE_URL='postgresql://postgres.yhgnngtdmkxutcxnuhau:awxfTHvVUujtkZW9@aws-1-ap-south-1.pooler.supabase.com:6543/postgres'
+DATABASE_URL='postgresql://neondb_owner:npg_B3O6PmyrEGlZ@ep-lingering-moon-a1cq6n1b-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
 
 # JWT
 JWT_SECRET="your-super-secret-jwt-key-change-this-in-production"
@@ -13,9 +13,4 @@ NODE_ENV="development"
 
 # Redis (optional)
 REDIS_HOST="localhost"
-REDIS_PORT=6379
-
-# File Upload (we'll add later)
-# AWS_ACCESS_KEY_ID=
-# AWS_SECRET_ACCESS_KEY=
-# AWS_S3_BUCKET=
+REDIS_PO
