--- a/apps/backend/.env
+++ b/apps/backend/.env
@@ -1,9 +1,9 @@
 # Database
-DATABASE_URL='postgresql://postgres.yhgnngtdmkxutcxnuhau:awxfTHvVUujtkZW9@aws-1-ap-south-1.pooler.supabase.com:6543/postgres'
+DATABASE_URL= 'postgresql://postgres.vflojnrdffzdjacjkedh:yCNexNohsLkYTCDe@aws-1-ap-south-1.pooler.supabase.com:5432/postgres'
 
 # JWT
-JWT_SECRET="your-super-secret-jwt-key-change-this-in-production"
-JWT_REFRESH_SECRET="your-refresh-token-secret"
+JWT_SECRET="kuikbee-super-secret-jwt-key-2024"
+JWT_REFRESH_SECRET="kuikbee-refresh-token-secret-2024"
 JWT_EXPIRES_IN="15m"
 JWT_REFRESH_EXPIRES_IN="7d"
 
