--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "packageManager": "pnpm@8.0.0",
   "engines": {
     "node": ">=18.0.0"
+  },
+  "dependencies": {
+    "@nestjs/config": "^4.0.2"
   }
 }
