--- a/apps/restaurant/package.json
+++ b/apps/restaurant/package.json
@@ -9,8 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@hugeicons/core-free-icons": "^3.1.1",
+    "@hugeicons/react-native": "^1.0.11",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^7.9.1",
     "@react-navigation/native": "^7.1.27",
+    "@react-navigation/stack": "^7.6.16",
+    "axios": "^1.13.2",
     "expo": "~54.0.31",
     "expo-av": "~16.0.8",
     "expo-modules-core": "~3.0.29",
@@ -19,9 +24,10 @@
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "^2.30.0",
+    "react-native-paper": "^5.14.5",
     "react-native-reanimated": "^4.2.1",
-    "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "^4.19.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "zustand": "^5.0.10"
   },
   "devDependencies": {
