--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -23,6 +23,7 @@
     "@nestjs/platform-socket.io": "^11.1.12",
     "@nestjs/websockets": "^11.1.12",
     "@prisma/client": "^5.22.0",
+    "@supabase/supabase-js": "^2.91.0",
     "bcrypt": "^6.0.0",
     "cache-manager": "^7.2.8",
     "cache-manager-redis-store": "^3.0.1",
@@ -32,6 +33,7 @@
     "passport-jwt": "^4.0.1",
     "redis": "^5.10.0",
     "reflect-metadata": "0.2",
+    "sharp": "^0.34.5",
     "socket.io": "^4.8.3"
   },
   "devDependencies": {
