--- a/apps/restaurant/package.json
+++ b/apps/restaurant/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.13.2",
     "expo": "~54.0.31",
     "expo-av": "~16.0.8",
+    "expo-image-picker": "~17.0.10",
     "expo-modules-core": "~3.0.29",
     "expo-notifications": "~0.32.16",
     "expo-status-bar": "~3.0.9",
